Updated description and image of diagram
https://jira.hl7.org/browse/FHIR-50445

--- a/publish.ini
+++ b/publish.ini
@@ -187,6 +187,7 @@ nutrition-module-resources-relation.png =
 device-module-resources-big-map.png =
 pha-sample-measure-outline.png =
 transport-resource-event.png =
+DeviceModule.svg =
 
 [files]
 implementations/fhir-runtime.css = fhir-runtime.css
