--- a/source/w5.ini
+++ b/source/w5.ini
@@ -41,7 +41,7 @@ status=FiveWs.status
 class=FiveWs.class
 grade=FiveWs.grade
 what=FiveWs.what[x]
-who.focus=FiveWs.subject[x]
+who.focus=FiveWs.subject
 context=FiveWs.context
 when.init=FiveWs.init
 when.planned=FiveWs.planned
