FHIR-50672 adding imaging exmaple to dx module page

--- a/publish.ini
+++ b/publish.ini
@@ -87,6 +87,9 @@ workflow-optioni.png =
 workflow-optionl.png =
 workflow-relations.png =
 diagnostic-module-resources.png =
+diagnostic-module-imaging-fig1.png =
+diagnostic-module-imaging-fig2.png =
+diagnostic-module-imaging-fig3.png =
 parent-child-structure-1.png =
 parent-child-structure-2.png =
 parent-child-structure-3.png =
