--- a/source/fhir.ini
+++ b/source/fhir.ini
@@ -1401,7 +1401,7 @@ restful-interaction=codesystem\codesystem-restful-interaction.xml
 safety-entries=codesystem\codesystem-safety-entries.xml
 concept-properties=codesystem\codesystem-concept-properties.xml
 w3c-provenance-activity-type=provenance\codesystem-w3c-provenance-activity-type.xml
-extra-activity-type=provenance\codesystem-extra-activity-type.xml
+;extra-activity-type=provenance\codesystem-extra-activity-type.xml
 resource-status=codesystem\codesystem-resource-status.xml
 tldc=terminologies\codesystem-template-lifecycle.xml
 etsi-signature-type=datatypes\codesystem-etsi-signature-type.xml
