[FHIR-53085](https://jira.hl7.org/browse/FHIR-53085): Cleanup related to moving CDS Hooks mapping to CDS IG

--- a/publish.ini
+++ b/publish.ini
@@ -154,6 +154,7 @@ clinicalreasoning-measure-report-patient-list.png =
 clinicalreasoning-measure-report-population.png =
 clinicalreasoning-measure-structure.png =
 clinicalreasoning-cdshooks-approach.png =
+clinicalreasoning-cdsnative-approach.png =
 legal_state_machine_final.png =
 compare-to-r3.png =
 basic-product-structure.png =
