--- a/publish.ini
+++ b/publish.ini
@@ -155,6 +155,7 @@ clinicalreasoning-measure-report-population.png =
 clinicalreasoning-measure-structure.png =
 clinicalreasoning-cdshooks-approach.png =
 clinicalreasoning-cdsnative-approach.png =
+clinicalreasoning-qi-ecosystem.png =
 legal_state_machine_final.png =
 compare-to-r3.png =
 basic-product-structure.png =
