--- a/source/fhir.ini
+++ b/source/fhir.ini
@@ -37,6 +37,7 @@ Address
 ContactPoint
 Timing
 RelativeTime
+ConditionDetails
 Meta
 ContactDetail
 ExtendedContactDetail
@@ -49,6 +50,8 @@ RelatedArtifact
 TriggerDefinition
 UsageContext
 Dosage
+DosageDetails
+DosageSafety
 ;Population
 ProductShelfLife
 ;ProdCharacteristic
@@ -95,6 +98,8 @@ availability=metadatatypes
 monetarycomponent=metadatatypes
 contributor=metadatatypes
 dosage=dosage
+dosagedetails=dosage
+dosagesafety=dosage
 ;population=population
 productshelflife=productshelflife
 ;prodcharacteristic=prodcharacteristic
@@ -549,6 +554,8 @@ canonicalresource=fhir
 metadataresource=fhir
 metadatapattern=fhir
 dosage=phx
+dosageDetails=phx
+dosageSafety=phx
 encounter=pa
 endpoint=pa
 enrollmentrequest=fm
@@ -1016,10 +1023,13 @@ Address=normative
 ContactPoint=normative
 Timing=normative
 RelativeTime=normative
+ConditionDetails=normative
 Reference=normative
 CodeableReference=normative
 Meta=normative
 Dosage=normative
+DosageDetails=normative
+DosageSafety=normative
 ContactDetail=normative
 ExtendedContactDetail=normative
 VirtualServiceDetail=normative
@@ -1164,6 +1174,8 @@ Distance=dis
 DocumentReference=dcr
 DomainResource=dom
 Dosage=dos
+DosageDetails=dosdet
+DosageSafety=dossaf
 Duration=drt
 Element=ele
 ElementDefinition=eld
@@ -1251,6 +1263,7 @@ Reference=ref
 RegulatedAuthorization=rau
 RelatedPerson=rpp
 RelativeTime=rlt
+ConditionDetails=cdtl
 RequestOrchestration=rqo
 Requirements = req
 ResearchStudy=rst
@@ -2257,6 +2270,7 @@ RatioRange=can-bind
 Reference=has-target
 RelatedArtifact=
 RelativeTime=
+ConditionDetails=
 SampledData=
 Signature=
 SimpleQuantity=has-range,is-continuous,has-units
