--- a/source/fhir.ini
+++ b/source/fhir.ini
@@ -37,7 +37,6 @@ Address
 ContactPoint
 Timing
 RelativeTime
-ConditionDetails
 Meta
 ContactDetail
 ExtendedContactDetail
@@ -52,6 +51,7 @@ UsageContext
 Dosage
 DosageDetails
 DosageSafety
+DosageCondition
 ;Population
 ProductShelfLife
 ;ProdCharacteristic
@@ -100,6 +100,7 @@ contributor=metadatatypes
 dosage=dosage
 dosagedetails=dosage
 dosagesafety=dosage
+dosagecondition=dosage
 ;population=population
 productshelflife=productshelflife
 ;prodcharacteristic=prodcharacteristic
@@ -554,8 +555,9 @@ canonicalresource=fhir
 metadataresource=fhir
 metadatapattern=fhir
 dosage=phx
-dosageDetails=phx
-dosageSafety=phx
+dosagedetails=phx
+dosagesafety=phx
+dosagecondition=phx
 encounter=pa
 endpoint=pa
 enrollmentrequest=fm
@@ -1023,13 +1025,13 @@ Address=normative
 ContactPoint=normative
 Timing=normative
 RelativeTime=normative
-ConditionDetails=normative
 Reference=normative
 CodeableReference=normative
 Meta=normative
 Dosage=normative
 DosageDetails=normative
 DosageSafety=normative
+DosageCondition=normative
 ContactDetail=normative
 ExtendedContactDetail=normative
 VirtualServiceDetail=normative
@@ -1176,6 +1178,7 @@ DomainResource=dom
 Dosage=dos
 DosageDetails=dosdet
 DosageSafety=dossaf
+DosageCondition=doscdt
 Duration=drt
 Element=ele
 ElementDefinition=eld
@@ -1263,7 +1266,6 @@ Reference=ref
 RegulatedAuthorization=rau
 RelatedPerson=rpp
 RelativeTime=rlt
-ConditionDetails=cdtl
 RequestOrchestration=rqo
 Requirements = req
 ResearchStudy=rst
@@ -2270,7 +2272,6 @@ RatioRange=can-bind
 Reference=has-target
 RelatedArtifact=
 RelativeTime=
-ConditionDetails=
 SampledData=
 Signature=
 SimpleQuantity=has-range,is-continuous,has-units
