--- a/publish.ini
+++ b/publish.ini
@@ -625,6 +625,7 @@ ResearchStudy = Specialized.Public Health &amp; Research
 ResearchSubject = Specialized.Public Health &amp; Research
 Questionnaire = Specialized.Definitional Artifacts
 ActivityDefinition = Specialized.Definitional Artifacts
+DeviceDefinition = Specialized.Definitional Artifacts
 EventDefinition = Specialized.Definitional Artifacts
 PlanDefinition = Specialized.Definitional Artifacts
 ObservationDefinition = Specialized.Definitional Artifacts
