R4-R6 diff notes updates (WIP)

--- a/source/fhir.ini
+++ b/source/fhir.ini
@@ -1549,36 +1549,36 @@ http://hl7.org/fhir/data-types
 [r4-r6-changes]
 Account.partOf=@Account.parent
 AdverseEvent.contributor=-> AdverseEvent.participant.actor
-AdverseEvent.date=@AdverseEvent.occurrence
+AdverseEvent.date=@AdverseEvent.effect[x]
 AdverseEvent.event=@AdverseEvent.code
 AdverseEvent.referenceDocument=-> AdverseEvent.supportingInfo
 AdverseEvent.resultingCondition=@AdverseEvent.resultingEffect
 AdverseEvent.severity=AdverseEvent.severity is redundant with Condition.severity referenced via AdverseEvent.resultingEffect
 AdverseEvent.subjectMedicalHistory=-> AdverseEvent.supportingInfo
+AdverseEvent.supportingInfo=+ Can map from AdverseEvent.referenceDocument and AdverseEvent.subjectMedicalHistory
 AdverseEvent.suspectEntity.causality.assessment=-> AdverseEvent.suspectEntity.causality.assessmentMethod
 AdverseEvent.suspectEntity.causality.method=-> AdverseEvent.suspectEntity.causality.assessmentMethod
 AdverseEvent.suspectEntity.causality.productRelatedness=@AdverseEvent.suspectEntity.causality.entityRelatedness
-AllergyIntolerance.asserter=-> participant.actor
-AllergyIntolerance.recorder=-> participant.actor
+AllergyIntolerance.lastOccurrence=@AllergyIntolerance.lastReactionOccurrence
 Appointment.cancelationReason=@Appointment.cancellationReason
 Appointment.comment=@Appointment.note
-Appointment.reasonCode=@Appointment.reason
-Appointment.reasonReference=->Appointment.reason.reference
+Appointment.reason=+ merged both reasonCode and reasonReference into reason
+Appointment.reasonCode=-> reason
+Appointment.reasonReference=-> reason
 AuditEvent.agent.altId=-> use extension http://hl7.org/fhir/StructureDefinition/auditevent-AlternativeUserID
 AuditEvent.agent.media=-> AuditEvent.entity
 AuditEvent.agent.name=-> who.display
 AuditEvent.agent.network.address=-> network[x]
 AuditEvent.agent.network.type=-> network[x]
 AuditEvent.agent.purposeOfUse=@AuditEvent.agent.authorization
-AuditEvent.entity.description=-> entity.detail.valueString
 AuditEvent.entity.lifecycle=-> use extension http://hl7.org/fhir/StructureDefinition/auditevent-Lifecycle
 AuditEvent.entity.name=-> what.display
-AuditEvent.entity.type=-> what.type
-AuditEvent.outcomeDesc=-> outcome
-AuditEvent.period=@AuditEvent.occurred
+AuditEvent.outcomeDesc=-> outcome.detail.text
+AuditEvent.period=@AuditEvent.occurred[x]
 AuditEvent.purposeOfEvent=@AuditEvent.authorization
-AuditEvent.subtype=@AuditEvent.code
-AuditEvent.type=@AuditEvent.category
+BiologicallyDerivedProduct.collection.source=-> collection.sourcePatient or collection.sourceOrganization depending on reference type
+BiologicallyDerivedProduct.collection.sourceOrganization=+maps from BiologicallyDerivedProduct.collection.source depending on reference type
+BiologicallyDerivedProduct.collection.sourcePatient=+maps from BiologicallyDerivedProduct.collection.source depending on reference type
 BiologicallyDerivedProduct.manipulation=-> BiologicallyDerivedProduct.collection
 BiologicallyDerivedProduct.processing=-> BiologicallyDerivedProduct.collection
 BiologicallyDerivedProduct.quantity=-> BiologicallyDerivedProduct.property.valueQuantity
@@ -1586,120 +1586,153 @@ BiologicallyDerivedProduct.status=-> BiologicallyDerivedProduct.productStatus
 BiologicallyDerivedProduct.storage=-> BiologicallyDerivedProduct.storageTempRequirements
 BodyStructure.location=
 BodyStructure.locationQualifier=
+BodyStructure.morphology=@BodyStructure.includedStructure.morphology
 CarePlan.activity.detail=-> CarePlan.activity.plannedActivityReference
 CarePlan.activity.outcomeCodeableConcept=-> CarePlan.activity.performedActivity
 CarePlan.activity.outcomeReference=-> CarePlan.activity.performedActivity
 CarePlan.activity.reference=@CarePlan.activity.plannedActivityReference
 CarePlan.author=@CarePlan.custodian
-CareTeam.encounter=Avoid circular references since Encounter references CareTeam
-CareTeam.participant.period=@CareTeam.participant.coverage
-CareTeam.reasonCode=-> CareTeam.reason
-CareTeam.reasonReference=-> CareTeam.reason
-CatalogEntry=removed in favor of definitional resources
-ChargeItem.context=
-ChargeItem.factorOverride=
-ChargeItem.priceOverride=
-ChargeItemDefinition.applicability.description=
-ChargeItemDefinition.applicability.expression=
-ChargeItemDefinition.applicability.language=
-ChargeItemDefinition.effectivePeriod=
-ChargeItemDefinition.propertyGroup.priceComponent.amount=
-ChargeItemDefinition.propertyGroup.priceComponent.code=
-ChargeItemDefinition.propertyGroup.priceComponent.factor=
-ChargeItemDefinition.propertyGroup.priceComponent.type=
-Claim.careTeam.qualification=
+CareTeam.encounter=Removed to avoid circular references since Encounter references CareTeam
+CareTeam.participant.period=@CareTeam.participant.effective[x]
+CareTeam.participant.supportingInfo=+
+CareTeam.reason=+ merged both reasonCode and reasonReference into reason
+CareTeam.reasonCode=-> reason
+CareTeam.reasonReference=-> reason
+Claim.careTeam.qualification=@Claim.careTeam.specialty
+Claim.careTeam.responsible=
 Claim.diagnosis.packageCode=
 Claim.item.subSite=
+Claim.patient=@Claim.subject
 ClaimResponse.addItem.subSite=
-ClaimResponse.item.adjudication.value=
-Communication.reasonCode=-> Communication.reason
-Communication.reasonReference=-> Communication.reason
-CommunicationRequest.reasonCode=-> CommunicationRequest.reason
-CommunicationRequest.reasonReference=-> CommunicationRequest.reason
+ClaimResponse.item.adjudication.value=@ClaimResponse.item.adjudication.quantity
+ClaimResponse.patient=@ClaimResponse.subject
+Communication.reason=+ merged both reasonCode and reasonReference into reason
+Communication.reasonCode=-> reason
+Communication.reasonReference=-> reason
+CommunicationRequest.reason=+ merged both reasonCode and reasonReference into reason
+CommunicationRequest.reasonCode=-> reason
+CommunicationRequest.reasonReference=-> reason
 CommunicationRequest.sender=@CommunicationRequest.informationProvider
 Composition.confidentiality=
-Composition.relatesTo.code=
-Composition.relatesTo.target=
-ConceptMap.group.element.target.dependsOn.display=-> value as Coding
+# Was this actually a property rename?
+# Composition.relatesTo.code=@Composition.relatesTo.type
+ConceptMap.group.element.comment=+
+ConceptMap.group.element.noMap=+
+ConceptMap.group.element.target.dependsOn.display=-> value as Coding - display value
 ConceptMap.group.element.target.dependsOn.property=@ConceptMap.group.element.target.dependsOn.attribute
-ConceptMap.group.element.target.dependsOn.system=-> value as Coding
+ConceptMap.group.element.target.dependsOn.system=-> value as Coding - system value
 ConceptMap.group.element.target.equivalence=-> relationship
-ConceptMap.group.sourceVersion=-> canonical version in .group.source
-ConceptMap.group.targetVersion=-> canonical version in .group.target
+ConceptMap.group.sourceVersion=-> canonical version in group.source
+ConceptMap.group.targetVersion=-> canonical version in group.target
 ConceptMap.group.unmapped.url=@ConceptMap.group.unmapped.otherMap
-ConceptMap.source=@ConceptMap.sourceScope
-ConceptMap.target=@ConceptMap.targetScope
-Condition.asserter=-> Condition.participant.actor
-Condition.evidence.code=-> Condition.evidence
-Condition.evidence.detail=-> Condition.evidence
-Condition.recorder=-> Condition.participant.actor
+ConceptMap.source[x]=@ConceptMap.sourceScope[x]
+ConceptMap.target[x]=@ConceptMap.targetScope[x]
+Condition.evidence.code=-> Condition.evidence.concept
+Condition.evidence.detail=-> Condition.evidence.reference
 Consent.dateTime=@Consent.date
 Consent.organization=-> split into Consent.manager and Consent.controller
 Consent.patient=@Consent.subject
 Consent.performer=@Consent.grantee
+Consent.policy.uri=@Consent.policyBasis.uri
 Consent.policy=@Consent.policyBasis
-Consent.policyRule=@policyText
+Consent.policyRule=@Consent.policyText
 Consent.provision.class=@Consent.provision.resourceType
 Consent.provision.type=@Consent.decision
 Consent.scope=-> Merged with Consent.category
-Consent.source=-> split into Consent.sourceAttachement and Consent.sourceReference
+Consent.source[x]=-> split into Consent.sourceAttachement and Consent.sourceReference
+Consent.verification.verificationDate=@Consent.verification.date
+Contract.term.action.reason=+ merged both reasonCode and reasonReference into reason
 Contract.term.action.reasonCode=-> reason
 Contract.term.action.reasonReference=-> reason
 Coverage.payor=
-DetectedIssue.patient=
+DetectedIssue.patient=@DetectedIssue.subject
+Device.deviceName.name=@Device.name.value
+Device.deviceName.type=@Device.name.type
 Device.deviceName=@Device.name
-Device.distinctIdentifier=@biologicalSourceEvent
+Device.distinctIdentifier=@Device.biologicalSourceEvent
 Device.patient=-> patient association is in DeviceAssociation
-Device.property.valueCode=@Device.property.valueCodeableConcept
+Device.property.valueCode=-> Device.property.value[x] (as a new Device.property iteration)
+Device.property.valueQuantity=-> Device.property.value[x] (as a new Device.property iteration)
+Device.specialization.systemType=@Device.conformsTo.specification
+Device.specialization.version=@Device.conformsTo.version
 Device.specialization=@Device.conformsTo
 Device.statusReason=-> reason was removed. DeviceAssociation can be used
+Device.version.component=@Device.deviceVersion.component
+Device.version.type=@Device.deviceVersion.type
+Device.version.value=@Device.deviceVersion.value
+Device.version=@Device.deviceVersion
+DeviceDefinition.capability.description=-> DeviceDefinition.property.value
+DeviceDefinition.capability.type=-> DeviceDefinition.property.type
 DeviceDefinition.capability=-> DeviceDefinition.property
+DeviceDefinition.languageCode=@DeviceDefinition.outputLanguage
 DeviceDefinition.onlineInformation=@DeviceDefinition.guideline.relatedArtifact
-DeviceDefinition.parentDevice= Removed - to establish relations, use hasPArt
+DeviceDefinition.owner=This could be a packaging.distributor.organiationReference or manufacturer or neither - no direct mapping
+DeviceDefinition.parentDevice= Removed - to establish relations, use hasPart
 DeviceDefinition.physicalCharacteristics=-> DeviceDefinition.property
-DeviceDefinition.property.valueCode=@DeviceDefinition.property.valueCodeeableConcept
+DeviceDefinition.property.valueCode=@DeviceDefinition.property.value[x]
+DeviceDefinition.property.valueQuantity=@DeviceDefinition.property.value[x]
 DeviceDefinition.quantity=-> DeviceDefinition.packaging.count or DeviceDefinition.hasPart.count
+DeviceDefinition.specialization.systemType=@DeviceDefinition.conformsTo.specification
+DeviceDefinition.specialization.version=@DeviceDefinition.conformsTo.version
 DeviceDefinition.specialization=@DeviceDefinition.conformsTo
 DeviceDefinition.type=@DeviceDefinition.classification.type
 DeviceDefinition.url= Removed - only instances have addressable endpoints
 DeviceMetric.measurementPeriod=
-DeviceMetric.parent=
-DeviceMetric.source=
-DeviceRequest.performerType=-> performer
+DeviceMetric.device=+ This is the only link to the device, could be mapped from DeviceMetric.parent or DeviceMetric.source
+DeviceMetric.parent=-> could be DeviceMetric.device
+DeviceMetric.source=-> could be DeviceMetric.device
+DeviceRequest.asNeeded=+
+DeviceRequest.asNeededFor=+
+DeviceRequest.code[x]=@DeviceRequest.product[x]
+DeviceRequest.performerType=-> performer.concept
 DeviceRequest.priorRequest=@DeviceRequest.replaces
+DeviceRequest.reason=+ merged both reasonCode and reasonReference into reason
 DeviceRequest.reasonCode=-> reason
 DeviceRequest.reasonReference=-> reason
 DeviceUseStatement=@DeviceUsage
-DiagnosticReport.imagingStudy=
+DiagnosticReport.imagingStudy=@DiagnosticReport.study
 DocumentManifest=-> List
-DocumentReference.authenticator=-> attester
+DocumentReference.authenticator=-> DocumentReference.attester
 DocumentReference.content.format=-> content.profile
 DocumentReference.context.encounter=-> context
 DocumentReference.context.event=-> event
-DocumentReference.context.facilityType=-> facilityType
-DocumentReference.context.period=-> period
-DocumentReference.context.practiceSetting=-> practiceSetting
+DocumentReference.context.facilityType=@DocumentReference.facilityType
+DocumentReference.context.period=@DocumentReference.period
+DocumentReference.context.practiceSetting=@DocumentReference.practiceSetting
 DocumentReference.context.related=-> basedOn
 DocumentReference.context.sourcePatientInfo=-> use extension http://hl7.org/fhir/StructureDefinition/documentreference-sourcepatient
-DocumentReference.masterIdentifier=-> identifier
-EffectEvidenceSynthesis=
+DocumentReference.masterIdentifier=-> DocumentReference.identifier
 ElementDefinition.constraint.xpath=XPath removed due to lack of use and maintenance
-Encounter.classHistory=-> EncounterHistory.class
+Encounter.classHistory.class=-> EncounterHistory.class
+Encounter.classHistory.period=-> EncounterHistory.period
+Encounter.classHistory=-> EncounterHistory
 Encounter.diagnosis.rank=-> Account.diagnosis.sequence
+Encounter.hospitalization.admitSource=@Encounter.admission.admitSource
+Encounter.hospitalization.destination=@Encounter.admission.destination
 Encounter.hospitalization.dietPreference=@Encounter.dietPreference
+Encounter.hospitalization.dischargeDisposition=@Encounter.admission.dischargeDisposition
+Encounter.hospitalization.origin=@Encounter.admission.origin
+Encounter.hospitalization.preAdmissionIdentifier=@Encounter.admission.preAdmissionIdentifier
+Encounter.hospitalization.reAdmission=@Encounter.admission.reAdmission
 Encounter.hospitalization.specialArrangement=@Encounter.specialArrangement
 Encounter.hospitalization.specialCourtesy=@Encounter.specialCourtesy
 Encounter.hospitalization=@Encounter.admission
 Encounter.location.physicalType=@Encounter.location.form
 Encounter.participant.individual=@Encounter.participant.actor
 Encounter.period=@Encounter.actualPeriod
-Encounter.reasonCode=@Encounter.reason
-Encounter.reasonReference=-> Encounter.reason.reference
+Encounter.reason.use=+
+Encounter.reason.value=+ merged both reasonCode and reasonReference into reason.value
+Encounter.reason=+
+Encounter.reasonCode=-> reason.value
+Encounter.reasonReference=-> reason.value
+Encounter.statusHistory.period=
+Encounter.statusHistory.status=
 Encounter.statusHistory=-> EncounterHistory.status
 Endpoint.payloadMimeType=@Endpoint.payload.mimeType
 Endpoint.payloadType=@Endpoint.payload.type
 EpisodeOfCare.diagnosis.rank=
 EpisodeOfCare.diagnosis.role=@EpisodeOfCare.diagnosis.use
+EpisodeOfCare.patient=@EpisodeOfCare.subject
 EpisodeOfCare.team=@EpisodeOfCare.careTeam
 Evidence.effectivePeriod=
 Evidence.exposureBackground=
@@ -1709,9 +1742,9 @@ Evidence.outcome=
 Evidence.shortTitle=
 Evidence.subtitle=
 Evidence.topic=
-EvidenceVariable.characteristic.definition=
+EvidenceVariable.characteristic.definition[x]=
 EvidenceVariable.characteristic.groupMeasure=
-EvidenceVariable.characteristic.participantEffective=
+EvidenceVariable.characteristic.participantEffective[x]=
 EvidenceVariable.characteristic.timeFromStart=
 EvidenceVariable.characteristic.usageContext=
 EvidenceVariable.jurisdiction=
@@ -1719,26 +1752,49 @@ EvidenceVariable.subtitle=
 EvidenceVariable.topic=
 EvidenceVariable.type=
 ExampleScenario.actor.actorId=@ExampleScenario.actor.key
+ExampleScenario.actor.definition=+
 ExampleScenario.actor.name=@ExampleScenario.actor.title
+ExampleScenario.copyrightLabel=+
+ExampleScenario.description=+
 ExampleScenario.instance.containedInstance.resourceId=@ExampleScenario.instance.containedInstance.instanceReference
 ExampleScenario.instance.containedInstance.versionId=@ExampleScenario.instance.containedInstance.versionReference
+ExampleScenario.instance.content=+
 ExampleScenario.instance.name=@ExampleScenario.instance.title
 ExampleScenario.instance.resourceId=@ExampleScenario.instance.key
 ExampleScenario.instance.resourceType=@ExampleScenario.instance.structureType
-ExampleScenario.instance.version.versionId=@ExampleScenario.instance.version.version.key
+ExampleScenario.instance.structureProfile[x]=+
+ExampleScenario.instance.structureVersion=+
+ExampleScenario.instance.version.content=+
+ExampleScenario.instance.version.title=+
+ExampleScenario.instance.version.versionId=@ExampleScenario.instance.version.key
+ExampleScenario.process.step.number=+
 ExampleScenario.process.step.operation.name=@ExampleScenario.process.step.operation.title
-ExampleScenario.process.step.operation.number=@ExampleScenario.process.step.number
-ExampleScenario.workflow=@ExampleScenario.process.step.workflow
+ExampleScenario.process.step.operation.number=
+ExampleScenario.process.step.workflow=+
+ExampleScenario.title=+
+ExampleScenario.versionAlgorithm[x]=+
+ExampleScenario.workflow=
 ExplanationOfBenefit.addItem.subSite=
-ExplanationOfBenefit.careTeam.qualification=
+ExplanationOfBenefit.careTeam.qualification=@ExplanationOfBenefit.careTeam.specialty
 ExplanationOfBenefit.diagnosis.packageCode=
-ExplanationOfBenefit.item.adjudication.value=
+ExplanationOfBenefit.item.adjudication.value=@ExplanationOfBenefit.item.adjudication.quantity
 ExplanationOfBenefit.item.subSite=
-FamilyMemberHistory.reasonCode=-> FamilyMemberHistory.reason
-FamilyMemberHistory.reasonReference=-> FamilyMemberHistory.reason
+ExplanationOfBenefit.patient=@ExplanationOfBenefit.subject
+FamilyMemberHistory.reason=+ merged both reasonCode and reasonReference into reason
+FamilyMemberHistory.reasonCode=-> reason
+FamilyMemberHistory.reasonReference=-> reason
+Goal.acceptance.participant=+
+Goal.acceptance.priority=+
+Goal.acceptance.status=+
+Goal.acceptance=+
+Goal.continuous=+
 Goal.expressedBy=@Goal.source
-Goal.outcomeCode=-> Goal.outcome
-Goal.outcomeReference=-> Goal.outcome
+# Goal.outcome was deleted, so no mapping for it anymore
+Goal.outcomeCode=
+Goal.outcomeReference=
+Goal.recorder=+
+Goal.source=+
+Group.active=-> use Group.status instead
 Group.actual=-> Group.membership
 GuidanceResponse.reasonCode=-> reason
 GuidanceResponse.reasonReference=-> reason
@@ -1937,12 +1993,9 @@ ArtifactAssessment.relatesTo.type=+
 ArtifactAssessment.relatesTo=+
 AuditEvent.category=@AuditEvent.type
 AuditEvent.code=@AuditEvent.subtype
-AuditEvent.entity.description=+
-Availability.period=+
-BiologicallyDerivedProduct.collection.procedure=+
-BiologicallyDerivedProduct.collection.source=@BiologicallyDerivedProduct.collection.sourcePatient
-BiologicallyDerivedProduct.collection.sourceOrganization=+
-BodyStructure.includedStructure.image=+
+BiologicallyDerivedProduct.collection.source=-> collection.sourcePatient or collection.sourceOrganization depending on reference type
+BiologicallyDerivedProduct.collection.sourceOrganization=+maps from BiologicallyDerivedProduct.collection.source depending on reference type
+BiologicallyDerivedProduct.collection.sourcePatient=+maps from BiologicallyDerivedProduct.collection.source depending on reference type
 BodyStructure.morphology=@BodyStructure.includedStructure.morphology
 CapabilityStatement.actorDefinition=+
 CapabilityStatement.rest.resource.definition=+
