QA: Version Diff muliple files for each of the version diff analysis files

--- a/publish.ini
+++ b/publish.ini
@@ -250,6 +250,9 @@ defining-extensions.html =
 device-module.html =
 diagnostics-module.html =
 diff.html =
+diff-r4.html =
+diff-r4b.html =
+diff-r5.html =
 documentation.html =
 documents.html =
 dosage-definitions.html =
@@ -422,6 +425,9 @@ credits.html =
 device-module.html =
 diagnostics-module.html =
 diff.html =
+diff-r4.html =
+diff-r4b.html =
+diff-r5.html =
 documentation.html =
 exchange-module.html =
 ;extensibility-registry.html =
