QA: Version Diff - reasonCode/reasonReference consistency

--- a/source/fhir.ini
+++ b/source/fhir.ini
@@ -1563,8 +1563,8 @@ AllergyIntolerance.lastOccurrence=@AllergyIntolerance.lastReactionOccurrence
 Appointment.cancelationReason=@Appointment.cancellationReason
 Appointment.comment=@Appointment.note
 Appointment.reason=+ Merged both reasonCode and reasonReference into reason
-Appointment.reasonCode=-> reason
-Appointment.reasonReference=-> reason
+Appointment.reasonCode=-> reason.concept
+Appointment.reasonReference=-> reason.reference
 AuditEvent.agent.altId=-> use extension http://hl7.org/fhir/StructureDefinition/auditevent-AlternativeUserID
 AuditEvent.agent.media=-> AuditEvent.entity
 AuditEvent.agent.name=-> who.display
@@ -1596,8 +1596,8 @@ CareTeam.encounter=Removed to avoid circular references since Encounter referenc
 CareTeam.participant.period=@CareTeam.participant.effective[x]
 CareTeam.participant.supportingInfo=+
 CareTeam.reason=+ Merged both reasonCode and reasonReference into reason
-CareTeam.reasonCode=-> reason
-CareTeam.reasonReference=-> reason
+CareTeam.reasonCode=-> reason.concept
+CareTeam.reasonReference=-> reason.reference
 Claim.careTeam.qualification=@Claim.careTeam.specialty
 Claim.careTeam.responsible=
 Claim.diagnosis.packageCode=
@@ -1607,11 +1607,11 @@ ClaimResponse.addItem.subSite=
 ClaimResponse.item.adjudication.value=@ClaimResponse.item.adjudication.quantity
 ClaimResponse.patient=@ClaimResponse.subject
 Communication.reason=+ Merged both reasonCode and reasonReference into reason
-Communication.reasonCode=-> reason
-Communication.reasonReference=-> reason
+Communication.reasonCode=-> reason.concept
+Communication.reasonReference=-> reason.reference
 CommunicationRequest.reason=+ Merged both reasonCode and reasonReference into reason
-CommunicationRequest.reasonCode=-> reason
-CommunicationRequest.reasonReference=-> reason
+CommunicationRequest.reasonCode=-> reason.concept
+CommunicationRequest.reasonReference=-> reason.reference
 CommunicationRequest.sender=@CommunicationRequest.informationProvider
 Composition.confidentiality=
 # Was this actually a property rename?
@@ -1642,8 +1642,8 @@ Consent.scope=-> Merged with Consent.category
 Consent.source[x]=-> split into Consent.sourceAttachement and Consent.sourceReference
 Consent.verification.verificationDate=@Consent.verification.date
 Contract.term.action.reason=+ Merged both reasonCode and reasonReference into reason
-Contract.term.action.reasonCode=-> reason
-Contract.term.action.reasonReference=-> reason
+Contract.term.action.reasonCode=-> reason.concept
+Contract.term.action.reasonReference=-> reason.reference
 Coverage.payor=
 DetectedIssue.patient=@DetectedIssue.subject
 Device.deviceName.name=@Device.name.value
@@ -1687,8 +1687,8 @@ DeviceRequest.code[x]=@DeviceRequest.product[x]
 DeviceRequest.performerType=-> performer.concept
 DeviceRequest.priorRequest=@DeviceRequest.replaces
 DeviceRequest.reason=+ Merged both reasonCode and reasonReference into reason
-DeviceRequest.reasonCode=-> reason
-DeviceRequest.reasonReference=-> reason
+DeviceRequest.reasonCode=-> reason.concept
+DeviceRequest.reasonReference=-> reason.reference
 DeviceUseStatement=@DeviceUsage
 DiagnosticReport.imagingStudy=@DiagnosticReport.study
 DocumentManifest=-> List
@@ -1723,8 +1723,8 @@ Encounter.period=@Encounter.actualPeriod
 Encounter.reason.use=+
 Encounter.reason.value=+ Merged both reasonCode and reasonReference into reason.value
 Encounter.reason=+
-Encounter.reasonCode=-> reason.value
-Encounter.reasonReference=-> reason.value
+Encounter.reasonCode=-> reason.concept.value
+Encounter.reasonReference=-> reason.reference.value
 Encounter.statusHistory.period=
 Encounter.statusHistory.status=
 Encounter.statusHistory=-> EncounterHistory.status
@@ -1781,8 +1781,8 @@ ExplanationOfBenefit.item.adjudication.value=@ExplanationOfBenefit.item.adjudica
 ExplanationOfBenefit.item.subSite=
 ExplanationOfBenefit.patient=@ExplanationOfBenefit.subject
 FamilyMemberHistory.reason=+ Merged both reasonCode and reasonReference into reason
-FamilyMemberHistory.reasonCode=-> reason
-FamilyMemberHistory.reasonReference=-> reason
+FamilyMemberHistory.reasonCode=-> reason.concept
+FamilyMemberHistory.reasonReference=-> reason.reference
 Goal.acceptance.participant=+
 Goal.acceptance.priority=+
 Goal.acceptance.status=+
@@ -1797,8 +1797,8 @@ Goal.source=+
 Group.active=-> use Group.status instead
 Group.actual=-> Group.membership
 GuidanceResponse.reason=+ Merged both reasonCode and reasonReference into reason
-GuidanceResponse.reasonCode=-> reason
-GuidanceResponse.reasonReference=-> reason
+GuidanceResponse.reasonCode=-> reason.concept
+GuidanceResponse.reasonReference=-> reason.reference
 HealthcareService.availability=+Changed to a datatype: availableTime, notAvailable, and availabilityExceptions are now properties of the datatype
 HealthcareService.availabilityExceptions=-> HealthcareService.availability.notAvailabileTime.description (now part of a datatype)
 HealthcareService.availableTime=-> HealthcareService.availability (now part of a datatype)
@@ -1808,13 +1808,13 @@ ImagingStudy.procedure=+ Merged both procedureCode and procedureReference into p
 ImagingStudy.procedureCode=-> ImagingStudy.procedure
 ImagingStudy.procedureReference=-> ImagingStudy.procedure
 ImagingStudy.reason=+ Merged both reasonCode and reasonReference into reason
-ImagingStudy.reasonCode=-> reason
-ImagingStudy.reasonReference=-> reason
+ImagingStudy.reasonCode=-> reason.concept
+ImagingStudy.reasonReference=-> reason.reference
 Immunization.education=
 Immunization.reaction.detail=@Immunization.reaction.manifestation
 Immunization.reason=+ Merged both reasonCode and reasonReference into reason
-Immunization.reasonCode=-> reason
-Immunization.reasonReference=-> reason
+Immunization.reasonCode=-> reason.concept
+Immunization.reasonReference=-> reason.reference
 Immunization.recorded=
 Immunization.reportOrigin=
 ImplementationGuide.definition.resource.example[x]=@ImplementationGuide.definition.resource.isExample
@@ -1879,8 +1879,8 @@ MedicationAdministration.context=@MedicationAdministration.encounter
 MedicationAdministration.effective[x]=@MedicationAdministration.occurrence[x]
 MedicationAdministration.instantiates=
 MedicationAdministration.reason=+ Merged both reasonCode and reasonReference into reason
-MedicationAdministration.reasonCode=-> reason
-MedicationAdministration.reasonReference=-> reason
+MedicationAdministration.reasonCode=-> reason.concept
+MedicationAdministration.reasonReference=-> reason.reference
 MedicationDispense.context=@MedicationDispense.encounter
 MedicationDispense.detectedIssue=
 #MedicationDispense.notPerformedReason=+
@@ -1896,15 +1896,15 @@ MedicationRequest.informationSource=+
 MedicationRequest.instantiatesCanonical=
 MedicationRequest.instantiatesUri=
 MedicationRequest.reason=+ Merged both reasonCode and reasonReference into reason
-MedicationRequest.reasonCode=-> reason
-MedicationRequest.reasonReference=-> reason
+MedicationRequest.reasonCode=-> reason.concept
+MedicationRequest.reasonReference=-> reason.reference
 MedicationRequest.reported[x]=@MedicationRequest.isRecordOfRequest
 MedicationRequest.statusChanged=+
 MedicationStatement.basedOn=
 MedicationStatement.context=@MedicationStatement.encounter
 MedicationStatement.reason=+ Merged both reasonCode and reasonReference into reason
-MedicationStatement.reasonCode=-> reason
-MedicationStatement.reasonReference=-> reason
+MedicationStatement.reasonCode=-> reason.concept
+MedicationStatement.reasonReference=-> reason.reference
 MedicationStatement.statusReason=
 MedicinalProduct=-> MedicinalProductDefinition
 MedicinalProductAuthorization=-> RegulatedAuthorization
@@ -1992,8 +1992,8 @@ Procedure.complication=* Merged both Procedure.complication into the Procedure.c
 Procedure.complicationDetail=-> Procedure.complication.reference
 Procedure.performed[x]=@Procedure.occurrence[x]
 Procedure.reason=+ Merged both reasonCode and reasonReference into reason
-Procedure.reasonCode=-> reason
-Procedure.reasonReference=-> reason
+Procedure.reasonCode=-> reason.concept
+Procedure.reasonReference=-> reason.reference
 Procedure.usedCode=-> Procedure.used
 Procedure.usedReference=-> Procedure.used
 #Provenance.authorization=+
@@ -2021,8 +2021,8 @@ ResearchSubject.actualArm=
 ResearchSubject.assignedArm=
 ResearchSubject.individual=@ResearchSubject.subject
 RiskAssessment.reason=+ Merged both reasonCode and reasonReference into reason
-RiskAssessment.reasonCode=-> reason
-RiskAssessment.reasonReference=-> reason
+RiskAssessment.reasonCode=-> reason.concept
+RiskAssessment.reasonReference=-> reason.reference
 RiskEvidenceSynthesis=
 SampledData.period=@SampledData.interval
 SearchParameter.xpath=XPath removed due to lack of use and maintenance
@@ -2031,8 +2031,8 @@ ServiceRequest.location=+ Merged both locationCode and locationReference into lo
 ServiceRequest.locationCode=-> ServiceRequest.location.concept
 ServiceRequest.locationReference=-> ServiceRequest.location.reference
 ServiceRequest.reason=+ Merged both reasonCode and reasonReference into reason
-ServiceRequest.reasonCode=-> reason
-ServiceRequest.reasonReference=-> reason
+ServiceRequest.reasonCode=-> reason.concept
+ServiceRequest.reasonReference=-> reason.reference
 Specimen.accessionIdentifier=-> Specimen.identifier (along with all the other identifiers)
 Specimen.container.additive[x]=
 Specimen.container.capacity=
@@ -2054,8 +2054,8 @@ Substance.instance=-> consider if this should be multiple Substance resource ins
 SubstanceAmount=removed, content merged with the resources that used it
 Task.performerType=->Task.requestedPerformer.concept
 Task.reason=+ Merged both reasonCode and reasonReference into reason
-Task.reasonCode=-> reason
-Task.reasonReference=-> reason
+Task.reasonCode=-> reason.concept
+Task.reasonReference=-> reason.reference
 
 [r5-r6-changes]
 Account.parent=+copy from relatedAccount where type=parent
