QA: Version Diff - include documentation for the new ini sections

--- a/source/fhir.ini
+++ b/source/fhir.ini
@@ -1546,6 +1546,18 @@ http://hl7.org/fhir/data-types
 http://hl7.org/fhir/audit-event-action
 http://hl7.org/fhir/data-types
 
+
+# -----------------------------------------------------------------
+# Format of this section (r4-r6-changes and r5-r6-changes)
+#    new-name=+ comments to include for a new element
+#    new-name=* Additional comments to add to an element that had other changes (not added/deleted)
+#    old-name=@new-name, additional comments to include for a renamed/moved element
+#    old-name=general comments on why the property was deleted
+#    old-name=-> mapping property name(s) in new version and general comments (is still documented as deleted)
+# -----------------------------------------------------------------
+# If a backbone element is renamed, all the properties all need to be marked as renamed too
+# (refer to MedicinalProductDefinition for an exmaple of this)
+# -----------------------------------------------------------------
 [r4-r6-changes]
 Account.partOf=@Account.parent
 AdverseEvent.contributor=-> AdverseEvent.participant.actor
@@ -1906,6 +1918,13 @@ MedicationStatement.reason=+ Merged both reasonCode and reasonReference into rea
 MedicationStatement.reasonCode=-> reason.concept
 MedicationStatement.reasonReference=-> reason.reference
 MedicationStatement.statusReason=
+MedicinalProductDefinition.name.namePart=@MedicinalProductDefinition.name.part
+MedicinalProductDefinition.name.namePart.part=@MedicinalProductDefinition.name.part.part
+MedicinalProductDefinition.name.namePart.type=@MedicinalProductDefinition.name.part.type
+MedicinalProductDefinition.name.countryLanguage=@MedicinalProductDefinition.name.usage
+MedicinalProductDefinition.name.countryLanguage.country=@MedicinalProductDefinition.name.usage.country
+MedicinalProductDefinition.name.countryLanguage.jurisdiction=@MedicinalProductDefinition.name.usage.jurisdiction
+MedicinalProductDefinition.name.countryLanguage.language=@MedicinalProductDefinition.name.usage.language
 MedicinalProduct=-> MedicinalProductDefinition
 MedicinalProductAuthorization=-> RegulatedAuthorization
 MedicinalProductContraindication=-> ClinicalUseDefinition
