rework modules for OO

--- a/publish.ini
+++ b/publish.ini
@@ -192,6 +192,9 @@ device-module-resources-big-map.png =
 pha-sample-measure-outline.png =
 transport-resource-event.png =
 DeviceModule.svg =
+devices.png =
+nutrition.png =
+blood-bag.png
 
 [files]
 implementations/fhir-runtime.css = fhir-runtime.css
