--- a/publish.ini
+++ b/publish.ini
@@ -12,10 +12,8 @@
 ; 6. run the build again
 ; 8. now delete the terminology cache, and run the build again against the local terminology server
 ; 9. now commit everything
-version = 6.0.0-ballot3
-version-name=R6 Ballot (3rd Draft)
-
-[%normative-pages observation%]
+version = 6.0.0-ballot4
+version-name=R6 Ballot (1st Normative)
 
 [Archives]
 
